--- a/index.html
+++ b/index.html
@@ -34,57 +34,57 @@
                 <p>Top</p>
                 <div id="guessContainerTop" class="guessContainer">
                     <div class="guessCard">
-                        <div class="cluster">5</div>
-                        <div class="name">United States</div>
-                        <div class="score">.94</div>
+                        <div class="cluster"></div>
+                        <div class="name"></div>
+                        <div class="score"></div>
                     </div>
                     <div class="guessCard">
-                        <div class="cluster">5</div>
-                        <div class="name">United States</div>
-                        <div class="score">.94</div>
+                        <div class="cluster"></div>
+                        <div class="name"></div>
+                        <div class="score"></div>
                     </div>
                     <div class="guessCard">
-                        <div class="cluster">5</div>
-                        <div class="name">United States</div>
-                        <div class="score">.94</div>
+                        <div class="cluster"></div>
+                        <div class="name"></div>
+                        <div class="score"></div>
                     </div>
                     <div class="guessCard">
-                        <div class="cluster">5</div>
-                        <div class="name">United States</div>
-                        <div class="score">.94</div>
+                        <div class="cluster"></div>
+                        <div class="name"></div>
+                        <div class="score"></div>
                     </div>
                     <div class="guessCard">
-                        <div class="cluster">5</div>
-                        <div class="name">United States</div>
-                        <div class="score">.94</div>
+                        <div class="cluster"></div>
+                        <div class="name"></div>
+                        <div class="score"></div>
                     </div>
                 </div>
                 <p>Recent</p>
                 <div id="guessContainerRecent" class="guessContainer">
                     <div class="guessCard">
-                        <div class="cluster">5</div>
-                        <div class="name">United States</div>
-                        <div class="score">.94</div>
+                        <div class="cluster"></div>
+                        <div class="name"></div>
+                        <div class="score"></div>
                     </div>
                     <div class="guessCard">
-                        <div class="cluster">5</div>
-                        <div class="name">United States</div>
-                        <div class="score">.94</div>
+                        <div class="cluster"></div>
+                        <div class="name"></div>
+                        <div class="score"></div>
                     </div>
                     <div class="guessCard">
-                        <div class="cluster">5</div>
-                        <div class="name">United States</div>
-                        <div class="score">.94</div>
+                        <div class="cluster"></div>
+                        <div class="name"></div>
+                        <div class="score"></div>
                     </div>
                     <div class="guessCard">
-                        <div class="cluster">5</div>
-                        <div class="name">United States</div>
-                        <div class="score">.94</div>
+                        <div class="cluster"></div>
+                        <div class="name"></div>
+                        <div class="score"></div>
                     </div>
                     <div class="guessCard">
-                        <div class="cluster">5</div>
-                        <div class="name">United States</div>
-                        <div class="score">.94</div>
+                        <div class="cluster"></div>
+                        <div class="name"></div>
+                        <div class="score"></div>
                     </div>
                 </div>
             </div>
