--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
                     <div class="guessCard">
                         <div class="cluster"></div>
                         <div class="name"></div>
-                        <div class="score"></div>
+                        <div class="distance"></div>
                     </div>
                     <div class="guessCard">
                         <div class="cluster"></div>
                         <div class="name"></div>
-                        <div class="score"></div>
+                        <div class="distance"></div>
                     </div>
                     <div class="guessCard">
                         <div class="cluster"></div>
                         <div class="name"></div>
-                        <div class="score"></div>
+                        <div class="distance"></div>
                     </div>
                     <div class="guessCard">
                         <div class="cluster"></div>
                         <div class="name"></div>
-                        <div class="score"></div>
+                        <div class="distance"></div>
                     </div>
                     <div class="guessCard">
                         <div class="cluster"></div>
                         <div class="name"></div>
-                        <div class="score"></div>
+                        <div class="distance"></div>
                     </div>
                 </div>
                 <p>Recent</p>
@@ -64,27 +64,27 @@
                     <div class="guessCard">
                         <div class="cluster"></div>
                         <div class="name"></div>
-                        <div class="score"></div>
+                        <div class="distance"></div>
                     </div>
                     <div class="guessCard">
                         <div class="cluster"></div>
                         <div class="name"></div>
-                        <div class="score"></div>
+                        <div class="distance"></div>
                     </div>
                     <div class="guessCard">
                         <div class="cluster"></div>
                         <div class="name"></div>
-                        <div class="score"></div>
+                        <div class="distance"></div>
                     </div>
                     <div class="guessCard">
                         <div class="cluster"></div>
                         <div class="name"></div>
-                        <div class="score"></div>
+                        <div class="distance"></div>
                     </div>
                     <div class="guessCard">
                         <div class="cluster"></div>
                         <div class="name"></div>
-                        <div class="score"></div>
+                        <div class="distance"></div>
                     </div>
                 </div>
             </div>
