--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Thingle</title>
+    <title>Knowledgele</title>
 </head>
 <body>
     <header>
-        <p>Thingle</p>
+        <p>Knowledgele</p>
     </header>
 
     <div class="panelWrapper">
@@ -93,7 +93,7 @@
     </div>
 
     <footer>
-        <p>Footer</p>
+        <p></p>
     </footer>
 
     <script src="script.js"></script>
