--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </header>
 
     <div class="panelWrapper">
+        <canvas id="canvas"></canvas>
 
         <div class="leftPanel">
-            <canvas id="canvas"></canvas>
             <div id="formWrapper" class="formWrapper">
                 <div id="suggestionContainer" class="suggestionContainer">
                     <div class="suggestionCard"></div>
@@ -31,7 +31,7 @@
 
         <div class="rightPanel">
             <div id="guessWrapper" class="guessWrapper">
-                <p>Top</p>
+                <p>Best</p>
                 <div id="guessContainerTop" class="guessContainer">
                     <div class="guessCard">
                         <div class="cluster"></div>
