--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>WikiGuess</title>
+    <title>Find the Article</title>
 </head>
 <body>
     <header>
-        <h1>WikiGuess</h1>
+        <h1>Find the Article</h1>
         <!-- <p>May 17, 2025</p> -->
     </header>
 
@@ -51,8 +51,18 @@
                     </button>
                 </div>
             </div>
+
+            <div class="topGuessesArticleSubHeaderSmall">
+                <button id="expandButton" class="expandButton">
+                    <h3>Expand All</h3>
+                </button>
+                <button id="collapseButton" class="collapseButton">
+                    <h3>Collapse All</h3>
+                </button>
+            </div>
             
-            <div id="topGuessesContainer" class="topGuessesContainer"></div>
+            <div id="topGuessesContainer" class="topGuessesContainer">
+            </div>
         </div>
     </div>
 
