--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
     }
   </style>
 </head>
-
-<body class="min-h-[100dvh] flex flex-col bg-slate-900 text-white">
+<body class="h-screen bg-slate-900 text-white flex flex-col overflow-hidden">
   <header class="shrink-0 px-4 pt-6 pb-2 w-full max-w-xl mx-auto select-none">
     <div class="flex items-baseline justify-between mb-2">
       <h1 class="text-xl font-extrabold tracking-tight md:text-2xl">
@@ -89,7 +88,9 @@
     </div>
   </main>
 
-  <footer class="shrink-0 pb-4 px-4 pt-? ... [padding-bottom:calc(1rem+env(safe-area-inset-bottom))]">
+  <footer
+    class="shrink-0 pb-safe pb-4 px-4 w-full max-w-xl mx-auto flex flex-col items-center gap-3 md:gap-4 bg-slate-900">
+
     <div class="w-full flex flex-col items-center gap-2">
       <div id="mainSuggestion" class="suggestion-main w-full">
         <span id="mainSuggestionText"></span><span class="blink-caret"></span><span id="mainSuggestionPrompt" class="text-gray-500/60"></span>
