--- a/index.html
+++ b/index.html
@@ -57,6 +57,80 @@
   </style>
 </head>
 <body class="h-dvh bg-slate-900 text-white flex flex-col">
+    
+  <!-- Intro Modal -->
+  <div
+    class="fixed inset-0 z-50 flex items-start sm:items-center justify-center bg-black/70 backdrop-blur-sm px-3 py-6 sm:py-0"
+    role="dialog"
+    aria-modal="true"
+    aria-labelledby="howto-title"
+    aria-describedby="howto-desc"
+    id="introModal"
+  >
+    <div class="relative w-full max-w-sm rounded-md bg-neutral-900 text-neutral-100 shadow-2xl ring-1 ring-neutral-700/60 overflow-hidden">
+      <button
+        type="button"
+        aria-label="Close dialog"
+        class="absolute top-2 right-2 inline-flex h-8 w-8 items-center justify-center rounded hover:bg-neutral-700/60 focus:outline-none focus-visible:ring focus-visible:ring-emerald-400/70 transition"
+      >
+        <span class="block h-4 w-4 relative">
+          <span class="absolute inset-0 rotate-45 bg-current origin-center" style="height:2px;width:100%;top:50%;transform:translateY(-50%) rotate(45deg);"></span>
+          <span class="absolute inset-0 -rotate-45 bg-current origin-center" style="height:2px;width:100%;top:50%;transform:translateY(-50%) rotate(-45deg);"></span>
+        </span>
+      </button>
+
+      <div class="px-6 pt-7 pb-8 text-[15px] leading-relaxed">
+        <h2 id="howto-title" class="text-2xl font-extrabold tracking-tight mb-3">
+          How To Play
+        </h2>
+        <p id="howto-desc" class="mb-4">
+          Find the Article of the Day!
+        </p>
+        <ul class="list-disc space-y-3 pl-5 marker:text-neutral-200">
+          <li>Each guess must be an existing Wikipedia article.</li>
+          <li>After each guess the game tells you how close you are to the Article of the Day.</li>
+          <li>Paragraphs from the articles you guess are scored individually.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- Win Modal -->
+  <div
+    class="fixed inset-0 z-50 flex items-start sm:items-center justify-center bg-black/70 backdrop-blur-sm px-3 py-6 sm:py-0"
+    role="dialog"
+    aria-modal="true"
+    aria-labelledby="howto-title"
+    aria-describedby="howto-desc"
+    id="winModal"
+    
+  >
+    <div class="relative w-full max-w-sm rounded-md bg-sky-500/80 text-neutral-100 shadow-2xl ring-1 ring-neutral-700/60 overflow-hidden">
+      <button
+        type="button"
+        aria-label="Close dialog"
+        class="absolute top-2 right-2 inline-flex h-8 w-8 items-center justify-center rounded hover:bg-neutral-700/60 focus:outline-none focus-visible:ring focus-visible:ring-emerald-400/70 transition"
+      >
+        <span class="block h-4 w-4 relative">
+          <span class="absolute inset-0 rotate-45 bg-current origin-center" style="height:2px;width:100%;top:50%;transform:translateY(-50%) rotate(45deg);"></span>
+          <span class="absolute inset-0 -rotate-45 bg-current origin-center" style="height:2px;width:100%;top:50%;transform:translateY(-50%) rotate(-45deg);"></span>
+        </span>
+      </button>
+
+      <div class="px-6 pt-7 pb-8 text-[15px] leading-relaxed">
+        <h2 id="winArticle" class="text-2xl font-extrabold tracking-tight mb-3">
+          Jodie Foster
+        </h2>
+        <p>
+          You got it!
+        <p>
+        <p id="howto-desc" class="mb-4">
+          Guesses: <span id="winModalGuessCount">73</span>
+        </p>
+      </div>
+    </div>
+  </div>
+
   <header class="shrink-0 px-4 pt-6 pb-2 w-full max-w-xl mx-auto select-none">
     <div class="flex items-baseline justify-between mb-2">
       <h1 class="text-xl font-extrabold tracking-tight md:text-2xl">
